Bug 490255 - A forbidden cursor will appear when switching tools using shortcuts.
Summary: A forbidden cursor will appear when switching tools using shortcuts.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 5.2.3-beta1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-07-14 05:28 UTC by Benjamin Round
Modified: 2024-07-25 11:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Video of issue with black background (695.65 KB, video/mp4)
2024-07-14 05:28 UTC, Benjamin Round
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Benjamin Round 2024-07-14 05:28:09 UTC
Created attachment 171649 [details]
Video of issue with black background

SUMMARY
**Input Devices**
Wireless Mouse and laptop trackpad
A forbidden cursor will appear when switching tools using shortcuts. The forbidden cursor does not appear when switching to the previous brush or other shortcuts like mirror or tile canvas. It only appears when using shortcuts to switch tools.

STEPS TO REPRODUCE
1. Open default Krita
2. Switch tools using a shortcut like G or T with the cursor over the canvas

OBSERVED RESULT
The forbidden cursor appears and then the tool is switched.

EXPECTED RESULT
The tool to instantly switch from the initial tool to the incoming tool accessed via a shortcut

SOFTWARE/OS VERSIONS
Windows: 10 and 11
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 5.15.7
Comment 1 Dmitry Kazakov 2024-07-21 10:24:59 UTC
Git commit fb9b813d487b7d70dae384a7b8e9c7c710ec6ba1 by Dmitry Kazakov.
Committed on 19/07/2024 at 12:02.
Pushed by dkazakov into branch 'release/5.2.4'.

Fix forbidden cursor blinking when switching tools with shortcuts

M  +1    -1    libs/flake/KoToolManager.cpp

https://invent.kde.org/graphics/krita/-/commit/fb9b813d487b7d70dae384a7b8e9c7c710ec6ba1
Comment 2 Dmitry Kazakov 2024-07-25 11:12:30 UTC
Git commit c6a32b2e097ee571235995ab3fa49dafbf77435c by Dmitry Kazakov.
Committed on 25/07/2024 at 11:11.
Pushed by dkazakov into branch 'master'.

Fix forbidden cursor blinking when switching tools with shortcuts

M  +1    -1    libs/flake/KoToolManager.cpp

https://invent.kde.org/graphics/krita/-/commit/c6a32b2e097ee571235995ab3fa49dafbf77435c
Comment 3 Dmitry Kazakov 2024-07-25 11:16:25 UTC
Git commit 87ec5dd42b16fea5afe28fa56aec3088378b3545 by Dmitry Kazakov.
Committed on 25/07/2024 at 11:13.
Pushed by dkazakov into branch 'krita/5.2'.

Fix forbidden cursor blinking when switching tools with shortcuts

M  +1    -1    libs/flake/KoToolManager.cpp

https://invent.kde.org/graphics/krita/-/commit/87ec5dd42b16fea5afe28fa56aec3088378b3545