Fix forbidden cursor blinking when switching tools with shortcuts

BUG:490255