libs/flake/KoToolManager.cpp
@@ -445,7 +445,7 @@ void KoToolManager::Private::connectActiveTool()
     }
 
     // we expect the tool to emit a cursor on activation.
-    updateCursor(Qt::ForbiddenCursor);
+    updateCursor(Qt::BlankCursor);
 }
 
 
